Fixing subscription bar overflow and font size

--- a/app/static/css/alt/main.css
+++ b/app/static/css/alt/main.css
@@ -445,8 +445,9 @@ li.pure-menu-item span{
 }
 .subscriptionbar {
     background: #000;
-    font-variant: small-caps;
     color: #ddd;
+    overflow: hidden;
+    font-size: 0.8em;
 }
 
 .subscriptionbar ul{
